# quick-task-switcher

./: .gitignore  README.md  main.py  pyproject.toml  quick_task_switch.spec  quick_task_switcher.spec  quick_task_switcher_onefile.spec
actions/: __init__.py  quit.py
assets/: style.css
globals/: __init__.py  config.py  help.py  messages.py  paths.py  signals.py
menus/: __init__.py  actions.py  goto.py
utils/: config_manager.py  db_conn.py  desk_info.py  dialogs.py  formatters.py  monitors.py  paths.py  ports.py  screenshot.py  sess_manager.py  stopwatch.py  tray.py
utils/desk_manager/: __init__.py  desk_manager.py
utils/desk_watcher/: README.md  __init__.py  constants.py  exceptions.py  utils.py  watcher.py  watcher_qt.py
utils/event_logger/: __init__.py  db_logger.py  utils.py
utils/icon_extractor/: __init__.py  extract_exe_icon.py
utils/window_watcher/: __init__.py  window_watcher_qt.py
web/backend/: app.py  server.py
web/backend/routers/: desktops.py  desktops_info.py  info.py  screenshot.py
web/frontend/: .gitignore  README.md  config.json  package.json  webpack.config.js
web/frontend/src/: desktops_info.js  durations_pie.js  index.html  index.js  style.css  utils.js
widgets/: __init__.py  base.py  desk_name.py  desk_num_key.py  desk_timer.py  grab_area_widget.py  grab_widget.py  main.py  sess_tree.py  tray.py
widgets/settings/: __init__.py  setting.py
widgets/windows/: help.py  main.py  sess_manager_win.py  web.py
windows/: help.py  main.py  sess_manager_win.py  web.py
