[tool.poetry]
name = "qt-quick-task-switcher"
version = "0.1.0"
description = ""
authors = ["Mazen <mazenbesher@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
PyQt5 = "^5.15.2"
keyboard = "^0.13.5"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
