[tool.poetry]
name = "qt-quick-task-switcher"
version = "0.1.0"
description = ""
authors = ["Mazen <mazenbesher@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
PyQt5 = "^5.15.2"
keyboard = "^0.13.5"
dataclasses-json = "^0.5.2"
PyQtWebEngine = "^5.15.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
mss = "^6.1.0"
Pillow = "^8.1.0"
screeninfo = "^0.6.7"
SQLAlchemy = "^1.3.23"
numpy = "^1.20.1"
pandas = "^1.2.2"
psutil = "^5.8.0"
pywin32 = "^300"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
